--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ffi-napi": "^4.0.3",
+    "node-addon-api": "^8.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
