--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "sass": "^1.85.0",
     "vite-plugin-wasm": "^3.4.1"
   },
   "devDependencies": {
@@ -41,7 +42,8 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "rimraf": "^6.0.1",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "build": {
     "appId": "com.ulgetMax.package",
@@ -59,8 +61,7 @@
     },
     "files": [
       "dist/**/*",
-      "electron/main.js",
-      "electron/preload.js",
+      "electron/**/*",
       "node_modules/**/*",
       "package.json"
     ],
