--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xmldom/xmldom": "^0.9.7",
     "docx": "^9.1.1",
     "file-saver": "^2.0.5",
     "node-addon-api": "^8.3.0",
     "pg": "^8.13.3",
+    "pizzip": "^3.1.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
