--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@xmldom/xmldom": "^0.9.7",
     "docx": "^9.1.1",
     "file-saver": "^2.0.5",
+    "menubar": "^9.5.1",
     "node-addon-api": "^8.3.0",
     "pg": "^8.13.3",
     "pizzip": "^3.1.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
-    "sass": "^1.85.0",
     "vite-plugin-wasm": "^3.4.1"
   },
   "devDependencies": {
@@ -36,7 +36,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
-    "electron": "^22.3.25",
+    "electron": "^22.3.27",
     "electron-builder": "^23.6.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
@@ -44,6 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "rimraf": "^6.0.1",
+    "sass": "^1.85.1",
     "vite": "^6.0.5",
     "vite-plugin-svgr": "^4.3.0"
   },
@@ -51,6 +52,10 @@
     "appId": "com.ulgetMax.package",
     "productName": "Zaochka",
     "copyright": "Copyright © 2025 Volyntsev Maksim",
+    "icon": "electron/assets/IconKitchen-Output/android/play_store_512.ico",
+    "win": {
+      "icon": "electron/assets/IconKitchen-Output/android/ic_college_Zaochka.ico"
+    },
     "mac": {
       "category": "public.app-category.utilities"
     },
