--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@xmldom/xmldom": "^0.9.7",
     "docx": "^9.1.1",
+    "edge-js": "^23.1.5",
     "file-saver": "^2.0.5",
     "menubar": "^9.5.1",
     "node-addon-api": "^8.3.0",
@@ -38,6 +39,7 @@
     "cross-env": "^7.0.3",
     "electron": "^22.3.27",
     "electron-builder": "^23.6.0",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
