--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "edge-js": "^23.1.5",
     "file-saver": "^2.0.5",
     "menubar": "^9.5.1",
-    "node-addon-api": "^8.3.0",
+    "node-addon-api": "^8.3.1",
+    "node-gyp": "^11.2.0",
+    "node-window-manager": "^2.2.4",
     "pg": "^8.13.3",
     "pizzip": "^3.1.8",
     "react": "^18.3.1",
