--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "dev": "cross-env NODE_ENV=development concurrently \"vite\" \"electron .\"",
     "clean": "rimraf dist dist_electron",
     "build:frontend": "vite build",
-    "build:electron": "electron-builder",
-    "build:copy-wasm": "echo 'Copying WASM... skipped, handled by electron-builder'",
-    "build": "npm run clean && npm run build:frontend && npm run build:electron",
+    "build:c++:x64": "node-gyp configure --arch=x64 --target=22.3.27 --dist-url=https://electronjs.org/headers && node-gyp build",
+    "build:c++:ia32": "node-gyp configure --arch=ia32 --target=22.3.27 --dist-url=https://electronjs.org/headers && node-gyp build",
+    "rebuild:32": "node-gyp rebuild --arch=ia32 --target=22.3.27 --dist-url=https://electronjs.org/headers",
+    "rebuild:64": "node-gyp rebuild --arch=x64  --target=22.3.27 --dist-url=https://electronjs.org/headers",
+    "build:electron:32": "npm run rebuild:32 && electron-builder --win --x86",
+    "build:electron:64": "npm run rebuild:64 && electron-builder --win --x64",
+    "build:win32": "npm run clean && npm run build:frontend && npm run build:electron:32",
+    "build:win64": "npm run clean && npm run build:frontend && npm run build:electron:64",
     "start": "electron .",
     "electron:dev": "electron .",
     "lint": "eslint .",
